Allow multi line commands using shift + enter

--- a/www/index.html
+++ b/www/index.html
@@ -20,8 +20,8 @@
           </p>
         </section>
         <div class="console prompt-container">
-          <div class="console prompt-text">>></div>
-          <input class="console" type="text" id="prompt-input" />
+          <span class="console prompt-text">>></span>
+          <textarea class="console" type="text" id="prompt-input"></textarea>
           <span>&nbsp;</span>
         </div>
       </div>
